fix: adjusts source fonts

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -3,14 +3,14 @@
     font-family: "CentraNube";
     font-weight: normal;
     font-style: normal;
-    src: url("/fonts/CentraNube-Book.woff2") format("woff2"),
-      url("/fonts/CentraNube-Book.woff") format("woff");
+    src: url("fonts/CentraNube-Book.woff2") format("woff2"),
+      url("fonts/CentraNube-Book.woff") format("woff");
   }
   @font-face {
     font-family: "CentraNube";
     font-weight: bold;
     font-style: normal;
-    src: url("/fonts/CentraNube-Bold.woff2") format("woff2"),
-      url("/fonts/CentraNube-Bold.woff") format("woff");
+    src: url("fonts/CentraNube-Bold.woff2") format("woff2"),
+      url("fonts/CentraNube-Bold.woff") format("woff");
   }
 </style>
