--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -6,24 +6,21 @@
 />
 <style type="text/css">
   @font-face {
-    font-family: "CentraNube";
+    font-family: "Geist";
     font-weight: 400;
     font-style: normal;
-    src: url("./static/CentraNube-Book.woff2") format("woff2"),
-      url("./static/CentraNube-Book.woff") format("woff");
+    src: url("./static/Geist-Book.woff2") format("woff2");
   }
   @font-face {
-    font-family: "CentraNube";
+    font-family: "Geist";
     font-weight: 500;
     font-style: normal;
-    src: url("./static/CentraNube-Medium.woff2") format("woff2"),
-      url("./static/CentraNube-Medium.woff") format("woff");
+    src: url("./static/Geist-Medium.woff2") format("woff2");
   }
   @font-face {
-    font-family: "CentraNube";
+    font-family: "Geist";
     font-weight: 700;
     font-style: normal;
-    src: url("./static/CentraNube-Bold.woff2") format("woff2"),
-      url("./static/CentraNube-Bold.woff") format("woff");
+    src: url("./static/Geist-Bold.woff2") format("woff2");
   }
 </style>
