--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -9,7 +9,7 @@
     font-family: "Geist";
     font-weight: 400;
     font-style: normal;
-    src: url("./static/Geist-Book.woff2") format("woff2");
+    src: url("./static/Geist-Regular.woff2") format("woff2");
   }
   @font-face {
     font-family: "Geist";
@@ -19,7 +19,7 @@
   }
   @font-face {
     font-family: "Geist";
-    font-weight: 700;
+    font-weight: 600;
     font-style: normal;
     src: url("./static/Geist-Bold.woff2") format("woff2");
   }
