feat: replace geist bold font with semibold

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -21,6 +21,6 @@
     font-family: "Geist";
     font-weight: 600;
     font-style: normal;
-    src: url("./static/Geist-Bold.woff2") format("woff2");
+    src: url("./static/Geist-SemiBold.woff2") format("woff2");
   }
 </style>
